backend/backend.log
nohup: ignoring input
/home/ryanh4966/projects/v3/myapp/backend/server.js:14
});const express = require("express");
         ^

SyntaxError: Identifier 'express' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1787:18)
    at Module._compile (node:internal/modules/cjs/loader:1828:20)
    at Object..js (node:internal/modules/cjs/loader:1985:10)
    at Module.load (node:internal/modules/cjs/loader:1577:32)
    at Module._load (node:internal/modules/cjs/loader:1379:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v24.17.0
